--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">smartlocker</string>
+    <string name="inicio_visitante"><u>Acessar como visitante</u></string>
     <string name="cadastro_tenhoOutraConta"><u>Tenho uma conta</u></string>
     <string name="cadastro_campos">Preencha <b><u>todos</u></b> os campos</string>
     <string name="recuperar_campoEmail">Digite o <b><u>email</u></b> utilizado no cadastro para recuperar sua senha</string>
