--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="recuperar_campoEmail">Digite o <b><u>email</u></b> utilizado no cadastro para recuperar sua senha</string>
     <string name="recuperar_voltarLogin"><u>Voltar para Login</u></string>
     <string name="recuperar_voltarCadastro"><u>Voltar para Cadastro</u></string>
+    <string name="spinner_hint">Selecione uma opção</string>
 </resources>
