Finalizaçao da activity de pagamento
Correçao de bugs e pequenos detalhes no texto de cada tela.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="recover_title"><b>Digite o código</b></string>
     <string name="recover_text">Enviamos para seu <b><u>email</u></b> um código de recuperação de conta </string>
     <string name="recover_resend"><u>Não recebi código</u></string>
+    <string name="cadastro_cartao">Para terminar a compra, preencha <b><u>todos</u></b> os campos</string>
 </resources>
